--- a/architechs.html
+++ b/architechs.html
@@ -41,9 +41,83 @@
                 <button>Explore Now</button>
             </div>
         </div>
+        <!-- experience section -->
+        <div class="experience-description">
+            <div>
+            <div>
+                <h1>Features you will love & enjoy</h1>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in<br> some form, by injected humour, or randomised words which <br>don't look even</p>
+
+            </div>
+            <div class="ex-des">
+            <div class="part">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in some <br>form, by injected humour, or randomised...........</p>
+               
+            </div>
+            <div class="part">
+                <h4>Drag & Drop Builder</h4>
+                <p>There are many variations of passages of Lorem Ipsum<br> available, but the majority have suffered alteration in some <br>form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="part">
+                <h4>Awesome Modern Design</h4>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in some<br> form, by injected humour, or randomised...........</p>
+            </div>
+            <div class="part">
+                <h4>Super Easy to Edit</h4>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration in some<br> form, by injected humour, or randomised...........</p>
+            </div>
+        </div>
+    </div>
+            <div>
+                <img class="experience-img" src="img/architect.png" alt="">
+                <div class="ten-year-badge">
+                    <h2 class="ten-year">10 + years</h2>
+                    <p>Experience</p>
+                </div>
+            </div>
+
+        </div>
+        <section>
+            <div class="some facts">
+                <h1 class="sf">Some Facts</h1>
+                <p class="sf-des">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
+            </div>
+            <div class="box-dec">
+            <div class="box">
+                <img src="img/ribon.png" alt="" class="batch">
+                <h3>54</h3>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="box">
+                <img src="img/projects.png" alt="" class="calender">
+                <h3>1458</h3>
+                <p>Project Finished</p>
+            </div>
+            <div class="box">
+                <img src="img/customers.png" class="customer" alt=""></img>
+                <h3>590</h3>
+                <p>Clients Worked</p>
+            </div>
+            <div class="box">
+                <img src="./img/email.png" class="email" alt="">
+                <h3>22578</h3>
+                <p>Email Send</p>
+            </div>
+        </div>
+        </section>
 
     </main>
     <footer>
+        <div>
+            <div>
+                <h1>Our Sponspors</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div>
+                <img src="./img/" alt="">
+            </div>
+        </div>
 
     </footer>
     
