--- a/architechs.html
+++ b/architechs.html
@@ -110,12 +110,23 @@
     </main>
     <footer>
         <div>
-            <div>
-                <h1>Our Sponspors</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="sponser">
+                <h1>Our Sponsors</h1>
+                <p>There are many variations of passages of Lorem Ipsum <br>available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="spnser-item">
+                <div>
+                <img class="box-2" src="./img/325465949_734012861238643_4607643182497767313_n.png" alt="">
             </div>
             <div>
-                <img src="./img/" alt="">
+                <img class="box-2" src="./img/325477014_501982335391848_1598883732396466226_n.png" alt="">
+            </div>
+            <div>
+                <img class="box-2" src="./img/325610826_1154134188823738_9189447270918481788_n.png" alt="">
+            </div>
+            <div>
+                <img class="box-2" src="./img/325688854_5568445016611790_5280655170479254040_n.png" alt="">
+            </div>
             </div>
         </div>
 
